--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "microhub",
   "version": "1.0.0",
-  "description": "Idea https://twitter.com/nazarff/status/1003551979753308160/photo/1",
+  "description": "Microsoft Github Theme",
   "main": "index.js",
   "scripts": {
     "dev": "rollup -w -c --environment NODE_ENV:development",
@@ -24,6 +24,7 @@
     "metro4": "^4.2.7"
   },
   "devDependencies": {
+    "autoprefixer": "^8.6.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
@@ -33,14 +34,15 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
+    "node-sass": "^4.9.0",
     "rollup": "^0.60.1",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-copy-assets": "^1.0.0",
+    "rollup-plugin-image-base64": "^1.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-prettyuglify": "^1.0.1",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-sass": "^0.8.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-uglify": "^4.0.0"
   }
